# yak

./: .gitmodules  CMakeLists.txt  generate_project_files.py
src/tests/: CMakeLists.txt  test_lexer.hpp  test_main.cpp  test_preprocessor.hpp
src/tests/yak/: add.yak  circular_include.yak  extra_whitespace.yak  include.yak  multiple_includes.yak  subtract.yak
src/yak/: CMakeLists.txt  main.cpp
src/yak/preprocessor/: preprocessor.hpp
src/yak/yak/exceptions/: exceptions.hpp
src/yak/yak/lexer/: lexer.cpp  lexer.hpp
src/yak/yak/preprocessor/: preprocessor.cpp  trim_whitespace.cpp  trim_whitespace.hpp
